--- a/userChrome.css
+++ b/userChrome.css
@@ -21,13 +21,19 @@
   border-right: solid 2px var(--identity-icon-color) !important;
   border-left: solid 2px var(--identity-icon-color) !important;
   /* border-bottom: ;*/
+  /* border-radius: ; */
+  /* border-top: solid 0.5px var(--identity-icon-color) !important;
+  border-bottom: solid 0.5px var(--identity-icon-color) !important; */
 
   transition: all 0.15s ease-in-out !important;
 }
 
 #tabbrowser-tabs .tab-background[selected="true"] {
-  border-right: solid 4px var(--identity-icon-color, #fff) !important;
-  border-left: solid 4px var(--identity-icon-color, #fff) !important;
+  border-right: solid 1px var(--identity-icon-color, #fff) !important;
+  border-left: solid 1px var(--identity-icon-color, #fff) !important;
+  border-top: solid 1px var(--identity-icon-color, #fff) !important;
+  border-bottom: solid 1px var(--identity-icon-color, #fff) !important;
+
   /* border-radius: 8% !important;
   border-bottom: solid 1px var(--identity-icon-color, #fff) !important; */
 }
@@ -143,5 +149,5 @@ tab:not([selected="true"]) > stack > hbox > .tab-close-button {
 .tabbrowser-tab
   > .tab-stack
   > .tab-background:not([selected], [multiselected]) {
-  background-color: color-mix(in srgb, rgb(255, 255, 255) 10%, transparent);
+  background-color: color-mix(in srgb, rgb(255, 255, 255) 3%, transparent);
 }
